--- a/storefront/config/locales/en.yml
+++ b/storefront/config/locales/en.yml
@@ -13,6 +13,7 @@ en:
         personal_details: Personal details
         please_update_your_contact_details: Please update your contact details
         store_credits_history: Store credits history
+        no_gift_cards: You currently have no gift cards
       cart:
         items_in_cart: Items in cart
         shipping_and_taxes_calculated_at_checkout: Shipping & taxes calculated at checkout
