Added documentation on sections and blocks (WIP)

--- a/docs/developer/storefront/images.mdx
+++ b/docs/developer/storefront/images.mdx
@@ -3,9 +3,9 @@ title: Images & Assets in Spree Storefront
 sidebarTitle: "Images & Assets"
 ---
 
-<Warning>
+<Info>
 You need to be on Spree 5.0.1 or higher to use these helpers. If you're on 5.0.0 please run `bundle update spree` to update your Spree version.
-</Warning>
+</Info>
 
 Spree comes with a handful of helper methods to make it easier to work with images and assets.
 
