--- a/docs/developer/storefront/storefront.mdx
+++ b/docs/developer/storefront/storefront.mdx
@@ -7,7 +7,7 @@ Spree 5 ships with a new mobile-first storefront that is fully customizable & th
 
 ## Architecture
 
-New Storefront consists of:
+Spree Storefront consists of:
 
 <CardGroup>
   <Card title="Themes" href="/developer/storefront/themes">
@@ -29,9 +29,9 @@ New Storefront consists of:
 
 ## Page Builder
 
-![](https://vendo-production-res.cloudinary.com/image/upload/w_1920/q_auto/v1738166777/docs/Storefront/Theme%20Editor/7.1.1.1.2_Theme_Editor_-_Click_On_Default_Theme_qy0urp.png)
-
 The new storefront comes with a visual Page Builder that allows non-developers to build pages using a drag-and-drop interface, as a part of Spree Admin Dashboard (provided via `spree_admin` gem). This allows your team to create new pages and sections, modify existing ones, and add new blocks to the pages in a no-code way.
+
+![](https://vendo-production-res.cloudinary.com/image/upload/w_1920/q_auto/v1738166777/docs/Storefront/Theme%20Editor/7.1.1.1.2_Theme_Editor_-_Click_On_Default_Theme_qy0urp.png)
 
 You can learn more about the Page Builder in the [User Documentation](/user/storefront/theme-editor).
 
