--- a/docs/developer/storefront/links.mdx
+++ b/docs/developer/storefront/links.mdx
@@ -3,5 +3,6 @@ title: "Links"
 sidebarTitle: "Links"
 ---
 
-Links are used to create the navigation of the storefront. They can be assigned to Sections and Blocks.
+<Warning>Documentation on links is coming soon</Warning>
 
+Links are used to create the navigation of the storefront. They can be assigned to Sections and Blocks.
