Docs: added deployment Emails guide

--- a/docs/developer/deployment/environment_variables.mdx
+++ b/docs/developer/deployment/environment_variables.mdx
@@ -30,4 +30,5 @@ There are also some other environment variables that you can set to customize yo
 | `REDIS_CACHE_URL` | Redis URL, used for caching, this could be your AWS ElastiCache instance or any other Redis instance (optional, if not provided will use file based cache) | | `redis://localhost:6379/1` |
 | `SCREENSHOT_API_TOKEN` | [Screenshot API token](https://screenshotapi.net/) (optional, used for screenshot generation) |  | `1234132512341234` |
 | `SENDGRID_API_KEY` | [SendGrid API key](https://docs.sendgrid.com/api-reference/api-keys) (optional, if not provided will not send transactional emails) |  | `SG.1234567890` |
+| `SENDGRID_DOMAIN` | The domain you want to use for sending emails that was verified in SendGrid |  | `mystore.com` |
 | `SENTRY_DSN` | Sentry DSN (optional, if not provided will not send errors to [Sentry](https://sentry.io/)) |  | `https://sentry.io/...` |
