--- a/docs/developer/deployment/caching.mdx
+++ b/docs/developer/deployment/caching.mdx
@@ -31,7 +31,16 @@ Now, you will need to change the `config/environments/production.rb` from:
 to:
 
 ```ruby
-config.cache_store = :redis_cache_store
+if ENV['REDIS_CACHE_URL'].present?
+  cache_servers = ENV['REDIS_CACHE_URL'].split(',') # if multiple instances are provided
+  config.cache_store = :redis_cache_store, {
+    url: cache_servers,
+    connect_timeout:    30,  # Defaults to 1 second
+    read_timeout:       0.2, # Defaults to 1 second
+    write_timeout:      0.2, # Defaults to 1 second
+    reconnect_attempts: 2,   # Defaults to 1
+  }
+end
 ```
 
 For more advanced configuration options, please refer to the [Spree Starter repository](https://github.com/spree/spree_starter/blob/main/config/environments/production.rb#L72).
