Page builder: ability to add more blocks to in sections

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1455,6 +1455,9 @@ en:
     package_from: package from
     page: Page
     page_blocks:
+      products:
+        buy_buttons:
+          display_name: Add To Cart
       buttons:
         display_name: Button
       link:
