--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1464,6 +1464,9 @@ en:
       newsletter_form:
         button_text_default: Submit
         placeholder_default: Enter your email
+      products:
+        buy_buttons:
+          display_name: Add To Cart
     page_not_found: Sorry! Page you are looking can’t be found.
     page_sections:
       announcement_bar:
