FIX order summary mail total amount

--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -77,6 +77,19 @@ en:
       export_only_filtered_records: Export only filtered records, matching the search criteria
       filters: Filters
       getting_started: Getting started
+      gift_card_batches:
+        codes_count: Codes count
+        gift_card_batch: Gift card batch
+        new_gift_card_batch: New Gift Card Batch
+        prefix: Prefix
+      gift_cards:
+        active: Active
+        all: All
+        all_statuses: All statuses
+        expired: Expired
+        issued_to: Issued to
+        new_gift_card: New gift card
+        redeemed: Redeemed
       integrations:
         invalid_integration_type: This integration is not allowed
         page_subtitle: Connect your store to third-party services to enhance customer experience.
