--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -228,6 +228,10 @@ en:
             base:
               card_expired: Card has expired
               expiry_invalid: Card expiration is invalid
+        spree/gift_card:
+          attributes:
+            base:
+              cannot_destroy_used_gift_card: Can't delete a used gift card
         spree/image:
           attributes:
             attachment:
@@ -314,10 +318,6 @@ en:
           attributes:
             variant:
               taken: You already added this item to your wishlist
-        spree/gift_card:
-          attributes:
-            base:
-              cannot_destroy_used_gift_card: "Can't delete a used gift card"
     models:
       spree/address:
         one: Address
@@ -1037,7 +1037,7 @@ en:
     expiration: Expiration
     expiration_date: Expiration Date
     expired: Expired
-    expires_at: Expires at
+    expires_at: Expires At
     explore_taxon: Explore taxon
     export: Export
     export_mailer:
@@ -1093,13 +1093,12 @@ en:
     generate_code: Generate coupon code
     get_back_to_the: Get back to the
     gift_card: Gift card
-    gift_cards: Gift cards
     gift_card_applied: The gift card was successfully applied to your order!
-    gift_card_removed: The gift card was successfully removed from your order
-    gift_card_using_store_credit_error: You can't apply the gift card after you applied the store credit.
     gift_card_minimum_order_value_error: You can't apply the gift card. The order total must be at least %{minimum_order_amount}, excluding shipping cost.
     gift_card_no_amount_remaining: You can't apply the gift card with no balance on it.
-    remove_gift_card_on_completed_order_error: You can't remove the gift card after the order was placed
+    gift_card_removed: The gift card was successfully removed from your order
+    gift_card_using_store_credit_error: You can't apply the gift card after you applied the store credit.
+    gift_cards: Gift cards
     go_to_category: Go to category
     go_to_facebook: Go to facebook
     go_to_homepage: Go to Home Page
@@ -1263,6 +1262,7 @@ en:
     metadata: Metadata
     min: Min
     minimal_amount: Minimal Amount
+    minimum_order_amount: Minimum Order Amount
     minimum_password_length:
       one: "(%{count} character minimum)"
       other: "(%{count} characters minimum)"
@@ -1756,6 +1756,7 @@ en:
     remember_me: Remember me
     remove: Remove
     remove_condition: Remove condition
+    remove_gift_card_on_completed_order_error: You can't remove the gift card after the order was placed
     remove_image: Remove Image
     rename: Rename
     report: Report
